--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About|Java Full Stack</title>
+    <title> About| Java Full Stack</title>
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-12 col-md-8 ">
                         </div>
-                        <a class="text-center mb-3" href="https://www.javatpoint.com/java-full-stack"><b>Java Full Stack</b></a>
+                        <a class="nav-link" href="https://www.javatpoint.com/java-full-stack"><b>Java Full Stack</b></a>
                         </div>
                             <div id="carouselExampleIndicators" class="carousel slide mt-3" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
