--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-12 col-md-8 ">
                         </div>
-                        <a class="nav-link" href="https://www.javatpoint.com/java-full-stack"><b>Java Full Stack</b></a>
+                        <a class="text-center mb-3" href="https://www.javatpoint.com/java-full-stack"><b>Java Full Stack</b></a>
                         </div>
                             <div id="carouselExampleIndicators" class="carousel slide mt-3" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
